@@ -5,10 +5,8 @@ import br.com.monteiro.data.vo.v1.security.TokenVO;
 import br.com.monteiro.integrationtests.testcontainers.AbstractIntegrationTest;
 import br.com.monteiro.integrationtests.vo.AccountCredentialsVO;
 import br.com.monteiro.integrationtests.vo.PersonVO;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
+import br.com.monteiro.integrationtests.vo.pagedmodels.PagedModelPerson;
 import com.fasterxml.jackson.databind.DeserializationFeature;
-import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.dataformat.xml.XmlMapper;
 import io.restassured.builder.RequestSpecBuilder;
 import io.restassured.filter.log.LogDetail;
@@ -19,7 +17,6 @@ import org.junit.jupiter.api.*;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.io.IOException;
-import java.util.List;
 
 import static io.restassured.RestAssured.given;
 import static org.hibernate.validator.internal.util.Contracts.assertNotNull;
@@ -44,31 +41,12 @@ public class PersonControllerXmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(0)
-    public void authorization() throws JsonMappingException, JsonProcessingException {
+    public void authorization() {
         AccountCredentialsVO user = new AccountCredentialsVO("leandro", "admin123");
 
-        var accessToken = given()
-                .basePath("/auth/signin")
-                .port(TestConfigs.SERVER_PORT)
-                .contentType(TestConfigs.CONTENT_TYPE_XML)
-                .accept(TestConfigs.CONTENT_TYPE_XML)
-                .body(user)
-                .when()
-                .post()
-                .then()
-                .statusCode(200)
-                .extract()
-                .body()
-                .as(TokenVO.class)
-                .getAccessToken();
+        var accessToken = given().basePath("/auth/signin").port(TestConfigs.SERVER_PORT).contentType(TestConfigs.CONTENT_TYPE_XML).accept(TestConfigs.CONTENT_TYPE_XML).body(user).when().post().then().statusCode(200).extract().body().as(TokenVO.class).getAccessToken();
 
-        specification = new RequestSpecBuilder()
-                .addHeader(TestConfigs.HEADER_PARAM_AUTHORIZATION, "Bearer " + accessToken)
-                .setBasePath("/api/person/v1/")
-                .setPort(TestConfigs.SERVER_PORT)
-                .addFilter(new RequestLoggingFilter(LogDetail.ALL))
-                .addFilter(new ResponseLoggingFilter(LogDetail.ALL))
-                .build();
+        specification = new RequestSpecBuilder().addHeader(TestConfigs.HEADER_PARAM_AUTHORIZATION, "Bearer " + accessToken).setBasePath("/api/person/v1/").setPort(TestConfigs.SERVER_PORT).addFilter(new RequestLoggingFilter(LogDetail.ALL)).addFilter(new ResponseLoggingFilter(LogDetail.ALL)).build();
     }
 
     @Test
@@ -76,18 +54,7 @@ public class PersonControllerXmlTest extends AbstractIntegrationTest {
     public void testCreate() throws IOException {
         mockPerson();
 
-        var content = given()
-                .spec(specification)
-                .contentType(TestConfigs.CONTENT_TYPE_XML)
-                .accept(TestConfigs.CONTENT_TYPE_XML)
-                .body(person)
-                .when()
-                .post()
-                .then()
-                .statusCode(200)
-                .extract()
-                .body()
-                .asString();
+        var content = given().spec(specification).contentType(TestConfigs.CONTENT_TYPE_XML).accept(TestConfigs.CONTENT_TYPE_XML).body(person).when().post().then().statusCode(200).extract().body().asString();
 
         PersonVO persistedPerson = objectMapper.readValue(content, PersonVO.class);
         person = persistedPerson;
@@ -113,18 +80,7 @@ public class PersonControllerXmlTest extends AbstractIntegrationTest {
     public void testUpdate() throws IOException {
         person.setLastName("Piquet Souto Maior");
 
-        var content = given()
-                .spec(specification)
-                .contentType(TestConfigs.CONTENT_TYPE_XML)
-                .accept(TestConfigs.CONTENT_TYPE_XML)
-                .body(person)
-                .when()
-                .put("{id}", person.getId())
-                .then()
-                .statusCode(200)
-                .extract()
-                .body()
-                .asString();
+        var content = given().spec(specification).contentType(TestConfigs.CONTENT_TYPE_XML).accept(TestConfigs.CONTENT_TYPE_XML).body(person).when().put("{id}", person.getId()).then().statusCode(200).extract().body().asString();
 
         PersonVO persistedPerson = objectMapper.readValue(content, PersonVO.class);
         person = persistedPerson;
@@ -150,18 +106,7 @@ public class PersonControllerXmlTest extends AbstractIntegrationTest {
     public void testDisablePersonById() throws IOException {
         mockPerson();
 
-        var content = given()
-                .spec(specification)
-                .contentType(TestConfigs.CONTENT_TYPE_XML)
-                .accept(TestConfigs.CONTENT_TYPE_XML)
-                .pathParam("id", person.getId())
-                .when()
-                .patch("{id}")
-                .then()
-                .statusCode(200)
-                .extract()
-                .body()
-                .asString();
+        var content = given().spec(specification).contentType(TestConfigs.CONTENT_TYPE_XML).accept(TestConfigs.CONTENT_TYPE_XML).pathParam("id", person.getId()).when().patch("{id}").then().statusCode(200).extract().body().asString();
 
         PersonVO persistedPerson = objectMapper.readValue(content, PersonVO.class);
         person = persistedPerson;
@@ -188,18 +133,7 @@ public class PersonControllerXmlTest extends AbstractIntegrationTest {
     public void testFindById() throws IOException {
         mockPerson();
 
-        var content = given()
-                .spec(specification)
-                .contentType(TestConfigs.CONTENT_TYPE_XML)
-                .accept(TestConfigs.CONTENT_TYPE_XML)
-                .pathParam("id", person.getId())
-                .when()
-                .get("{id}")
-                .then()
-                .statusCode(200)
-                .extract()
-                .body()
-                .asString();
+        var content = given().spec(specification).contentType(TestConfigs.CONTENT_TYPE_XML).accept(TestConfigs.CONTENT_TYPE_XML).pathParam("id", person.getId()).when().get("{id}").then().statusCode(200).extract().body().asString();
 
         PersonVO persistedPerson = objectMapper.readValue(content, PersonVO.class);
         person = persistedPerson;
@@ -223,17 +157,9 @@ public class PersonControllerXmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(5)
-    public void testDelete() throws IOException {
+    public void testDelete() {
 
-        var content = given()
-                .spec(specification)
-                .contentType(TestConfigs.CONTENT_TYPE_XML)
-                .accept(TestConfigs.CONTENT_TYPE_XML)
-                .pathParam("id", person.getId())
-                .when()
-                .delete("{id}")
-                .then()
-                .statusCode(204);
+        var content = given().spec(specification).contentType(TestConfigs.CONTENT_TYPE_XML).accept(TestConfigs.CONTENT_TYPE_XML).pathParam("id", person.getId()).when().delete("{id}").then().statusCode(204);
     }
 
 
@@ -241,21 +167,57 @@ public class PersonControllerXmlTest extends AbstractIntegrationTest {
     @Order(6)
     public void testFindAll() throws IOException {
 
-        var content = given()
-                .spec(specification)
-                .contentType(TestConfigs.CONTENT_TYPE_XML)
-                .accept(TestConfigs.CONTENT_TYPE_XML)
-                .when()
-                .get()
-                .then()
-                .statusCode(200)
-                .extract()
-                .body()
-                .asString();
-        List<PersonVO> people = objectMapper.readValue(content, new TypeReference<List<PersonVO>>() {
-        });
+        var content = given().spec(specification).contentType(TestConfigs.CONTENT_TYPE_XML).accept(TestConfigs.CONTENT_TYPE_XML).queryParam("page", 3, "size", 10, "direction", "asc").when().get().then().statusCode(200).extract().body().asString();
 
-        PersonVO foundPersonOne = people.get(0);
+        PagedModelPerson wrapper = objectMapper.readValue(content, PagedModelPerson.class);
+
+        var people = wrapper.getContent();
+
+        PersonVO foundPersonOne = people.getFirst();
+
+        assertNotNull(foundPersonOne.getId());
+        assertNotNull(foundPersonOne.getFirstName());
+        assertNotNull(foundPersonOne.getLastName());
+        assertNotNull(foundPersonOne.getAddress());
+        assertNotNull(foundPersonOne.getGender());
+        assertTrue(foundPersonOne.getEnabled());
+
+        assertEquals(911, foundPersonOne.getId());
+
+        assertEquals("Allegra", foundPersonOne.getFirstName());
+        assertEquals("Dome", foundPersonOne.getLastName());
+        assertEquals("57 Roxbury Pass", foundPersonOne.getAddress());
+        assertEquals("Female", foundPersonOne.getGender());
+
+        PersonVO foundPersonSix = people.get(5);
+
+        assertNotNull(foundPersonSix.getId());
+        assertNotNull(foundPersonSix.getFirstName());
+        assertNotNull(foundPersonSix.getLastName());
+        assertNotNull(foundPersonSix.getAddress());
+        assertNotNull(foundPersonSix.getGender());
+        assertFalse(foundPersonSix.getEnabled());
+
+        assertEquals(209, foundPersonSix.getId());
+
+        assertEquals("Alonso", foundPersonSix.getFirstName());
+        assertEquals("Luchelli", foundPersonSix.getLastName());
+        assertEquals("9 Doe Crossing Avenue", foundPersonSix.getAddress());
+        assertEquals("Male", foundPersonSix.getGender());
+    }
+
+
+    @Test
+    @Order(7)
+    public void testFindByName() throws IOException {
+
+        var content = given().spec(specification).contentType(TestConfigs.CONTENT_TYPE_XML).accept(TestConfigs.CONTENT_TYPE_XML).pathParam("firstName", "ayr").queryParam("page", 0, "size", 6, "direction", "asc").when().get("findPersonByName/{firstName}").then().statusCode(200).extract().body().asString();
+
+        PagedModelPerson wrapper = objectMapper.readValue(content, PagedModelPerson.class);
+
+        var people = wrapper.getContent();
+
+        PersonVO foundPersonOne = people.getFirst();
 
         assertNotNull(foundPersonOne.getId());
         assertNotNull(foundPersonOne.getFirstName());
@@ -271,44 +233,16 @@ public class PersonControllerXmlTest extends AbstractIntegrationTest {
         assertEquals("São Paulo", foundPersonOne.getAddress());
         assertEquals("Male", foundPersonOne.getGender());
 
-        PersonVO foundPersonSix = people.get(5);
-
-        assertNotNull(foundPersonSix.getId());
-        assertNotNull(foundPersonSix.getFirstName());
-        assertNotNull(foundPersonSix.getLastName());
-        assertNotNull(foundPersonSix.getAddress());
-        assertNotNull(foundPersonSix.getGender());
-        assertTrue(foundPersonSix.getEnabled());
-
-        assertEquals(9, foundPersonSix.getId());
-
-        assertEquals("Nelson", foundPersonSix.getFirstName());
-        assertEquals("Piquet", foundPersonSix.getLastName());
-        assertEquals("Brasília - DF, Brasil", foundPersonSix.getAddress());
-        assertEquals("Male", foundPersonSix.getGender());
     }
 
 
     @Test
-    @Order(7)
-    public void testFindAllWithoutToken() throws IOException {
+    @Order(8)
+    public void testFindAllWithoutToken() {
 
-        RequestSpecification specificationWithoutToken = new RequestSpecBuilder()
-                .setBasePath("/api/person/v1/")
-                .setPort(TestConfigs.SERVER_PORT)
-                .addFilter(new RequestLoggingFilter(LogDetail.ALL))
-                .addFilter(new ResponseLoggingFilter(LogDetail.ALL))
-                .build();
-        ;
+        RequestSpecification specificationWithoutToken = new RequestSpecBuilder().setBasePath("/api/person/v1/").setPort(TestConfigs.SERVER_PORT).addFilter(new RequestLoggingFilter(LogDetail.ALL)).addFilter(new ResponseLoggingFilter(LogDetail.ALL)).build();
 
-        var content = given()
-                .spec(specificationWithoutToken)
-                .contentType(TestConfigs.CONTENT_TYPE_XML)
-                .accept(TestConfigs.CONTENT_TYPE_XML)
-                .when()
-                .get()
-                .then()
-                .statusCode(403);
+        var content = given().spec(specificationWithoutToken).contentType(TestConfigs.CONTENT_TYPE_XML).accept(TestConfigs.CONTENT_TYPE_XML).when().get().then().statusCode(403);
     }
 
     private void mockPerson() {
