@@ -1,13 +1,12 @@
 package br.com.monteiro.integrationtests.controller.withyml;
 
+import br.com.monteiro.configs.TestConfigs;
 import br.com.monteiro.data.vo.v1.security.TokenVO;
 import br.com.monteiro.integrationtests.controller.withyml.mapper.YMLMapper;
 import br.com.monteiro.integrationtests.testcontainers.AbstractIntegrationTest;
 import br.com.monteiro.integrationtests.vo.AccountCredentialsVO;
 import br.com.monteiro.integrationtests.vo.PersonVO;
-import br.com.monteiro.configs.TestConfigs;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonMappingException;
+import br.com.monteiro.integrationtests.vo.pagedmodels.PagedModelPerson;
 import io.restassured.builder.RequestSpecBuilder;
 import io.restassured.config.EncoderConfig;
 import io.restassured.config.RestAssuredConfig;
@@ -18,10 +17,6 @@ import io.restassured.http.ContentType;
 import io.restassured.specification.RequestSpecification;
 import org.junit.jupiter.api.*;
 import org.springframework.boot.test.context.SpringBootTest;
-
-import java.io.IOException;
-import java.util.Arrays;
-import java.util.List;
 
 import static io.restassured.RestAssured.given;
 import static org.hibernate.validator.internal.util.Contracts.assertNotNull;
@@ -45,7 +40,7 @@ public class PersonControllerYmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(0)
-    public void authorization() throws JsonMappingException, JsonProcessingException {
+    public void authorization() {
         AccountCredentialsVO user = new AccountCredentialsVO("leandro", "admin123");
 
         var accessToken = given()
@@ -79,7 +74,7 @@ public class PersonControllerYmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(1)
-    public void testCreate() throws IOException {
+    public void testCreate() {
         mockPerson();
 
         var persistedPerson = given()
@@ -120,7 +115,7 @@ public class PersonControllerYmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(2)
-    public void testUpdate() throws IOException {
+    public void testUpdate() {
         person.setLastName("Piquet Souto Maior");
 
         var persistedPerson = given()
@@ -161,7 +156,7 @@ public class PersonControllerYmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(3)
-    public void testDisableById() throws IOException {
+    public void testDisableById() {
         mockPerson();
 
         var persistedPerson = given()
@@ -203,7 +198,7 @@ public class PersonControllerYmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(4)
-    public void testFindById() throws IOException {
+    public void testFindById() {
         mockPerson();
 
         var persistedPerson = given()
@@ -244,7 +239,7 @@ public class PersonControllerYmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(5)
-    public void testDelete() throws IOException {
+    public void testDelete() {
 
         var content = given()
                 .spec(specification)
@@ -264,9 +259,9 @@ public class PersonControllerYmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(6)
-    public void testFindAll() throws IOException {
+    public void testFindAll() {
 
-        var content = given()
+        var wrapper = given()
                 .spec(specification)
                 .config(RestAssuredConfig.config().encoderConfig(
                         EncoderConfig.encoderConfig()
@@ -275,17 +270,76 @@ public class PersonControllerYmlTest extends AbstractIntegrationTest {
                                         ContentType.TEXT)))
                 .contentType(TestConfigs.CONTENT_TYPE_YML)
                 .accept(TestConfigs.CONTENT_TYPE_YML)
+                .queryParam("page", 3, "size", 10, "direction", "asc")
                 .when()
                 .get()
                 .then()
                 .statusCode(200)
                 .extract()
                 .body()
-                .as(PersonVO[].class, objectMapper);
+                .as(PagedModelPerson.class, objectMapper);
 
-        List<PersonVO> people = Arrays.asList(content);
+        var people = wrapper.getContent();
 
-        PersonVO foundPersonOne = people.get(0);
+        PersonVO foundPersonOne = people.getFirst();
+
+        assertNotNull(foundPersonOne.getId());
+        assertNotNull(foundPersonOne.getFirstName());
+        assertNotNull(foundPersonOne.getLastName());
+        assertNotNull(foundPersonOne.getAddress());
+        assertNotNull(foundPersonOne.getGender());
+        assertTrue(foundPersonOne.getEnabled());
+
+        assertEquals(911, foundPersonOne.getId());
+
+        assertEquals("Allegra", foundPersonOne.getFirstName());
+        assertEquals("Dome", foundPersonOne.getLastName());
+        assertEquals("57 Roxbury Pass", foundPersonOne.getAddress());
+        assertEquals("Female", foundPersonOne.getGender());
+
+        PersonVO foundPersonSix = people.get(5);
+
+        assertNotNull(foundPersonSix.getId());
+        assertNotNull(foundPersonSix.getFirstName());
+        assertNotNull(foundPersonSix.getLastName());
+        assertNotNull(foundPersonSix.getAddress());
+        assertNotNull(foundPersonSix.getGender());
+        assertFalse(foundPersonSix.getEnabled());
+
+        assertEquals(209, foundPersonSix.getId());
+
+        assertEquals("Alonso", foundPersonSix.getFirstName());
+        assertEquals("Luchelli", foundPersonSix.getLastName());
+        assertEquals("9 Doe Crossing Avenue", foundPersonSix.getAddress());
+        assertEquals("Male", foundPersonSix.getGender());
+    }
+
+    @Test
+    @Order(7)
+    public void testFindByName() {
+
+        var wrapper = given()
+                .spec(specification)
+                .config(RestAssuredConfig.config().encoderConfig(
+                        EncoderConfig.encoderConfig()
+                                .encodeContentTypeAs(
+                                        TestConfigs.CONTENT_TYPE_YML,
+                                        ContentType.TEXT)))
+                .contentType(TestConfigs.CONTENT_TYPE_YML)
+                .accept(TestConfigs.CONTENT_TYPE_YML)
+                .pathParam("firstName", "ayr")
+                .queryParam("page", 0, "size", 6, "direction", "asc")
+                .when()
+                .get("findPersonByName/{firstName}")
+                .then()
+                .statusCode(200)
+                .extract()
+                .body()
+                .as(PagedModelPerson.class, objectMapper);
+
+        var people = wrapper.getContent();
+
+        PersonVO foundPersonOne = people.getFirst();
 
         assertNotNull(foundPersonOne.getId());
         assertNotNull(foundPersonOne.getFirstName());
@@ -301,27 +355,11 @@ public class PersonControllerYmlTest extends AbstractIntegrationTest {
         assertEquals("São Paulo", foundPersonOne.getAddress());
         assertEquals("Male", foundPersonOne.getGender());
 
-
-        PersonVO foundPersonSix = people.get(5);
-
-        assertNotNull(foundPersonSix.getId());
-        assertNotNull(foundPersonSix.getFirstName());
-        assertNotNull(foundPersonSix.getLastName());
-        assertNotNull(foundPersonSix.getAddress());
-        assertNotNull(foundPersonSix.getGender());
-        assertTrue(foundPersonSix.getEnabled());
-
-        assertEquals(9, foundPersonSix.getId());
-
-        assertEquals("Nelson", foundPersonSix.getFirstName());
-        assertEquals("Piquet", foundPersonSix.getLastName());
-        assertEquals("Brasília - DF, Brasil", foundPersonSix.getAddress());
-        assertEquals("Male", foundPersonSix.getGender());
     }
 
     @Test
-    @Order(7)
-    public void testFindAllWithoutToken() throws IOException {
+    @Order(8)
+    public void testFindAllWithoutToken() {
 
         RequestSpecification specificationWithoutToken = new RequestSpecBuilder()
                 .setBasePath("/api/person/v1/")
@@ -329,7 +367,6 @@ public class PersonControllerYmlTest extends AbstractIntegrationTest {
                 .addFilter(new RequestLoggingFilter(LogDetail.ALL))
                 .addFilter(new ResponseLoggingFilter(LogDetail.ALL))
                 .build();
-        ;
 
         var content = given()
                 .spec(specificationWithoutToken)
